<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:id="@+id/nameScrollView"
            style="@style/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_left_margin"
            android:layout_marginTop="@dimen/base_top_margin"
            android:layout_marginEnd="@dimen/base_right_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameField"
                    style="@style/NoEditableInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/nameEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_top_margin"
            android:text="@string/edit"
            app:layout_constraintStart_toStartOf="@+id/nameScrollView"
            app:layout_constraintTop_toBottomOf="@+id/nameScrollView" />

        <HorizontalScrollView
            android:id="@+id/addressScrollView"
            style="@style/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_top_margin"
            app:layout_constraintEnd_toEndOf="@+id/nameScrollView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nameScrollView"
            app:layout_constraintTop_toBottomOf="@+id/nameEditButton">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressField"
                    style="@style/NoEditableInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address" />
            </com.google.android.material.textfield.TextInputLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/addressEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/edit"
            app:layout_constraintStart_toStartOf="@+id/addressScrollView"
            app:layout_constraintTop_toBottomOf="@+id/addressScrollView" />

        <HorizontalScrollView
            android:id="@+id/commentScrollView"
            style="@style/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_top_margin"
            app:layout_constraintEnd_toEndOf="@+id/addressScrollView"
            app:layout_constraintStart_toStartOf="@+id/addressScrollView"
            app:layout_constraintTop_toBottomOf="@+id/addressEditButton">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentField"
                    style="@style/NoEditableInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment" />
            </com.google.android.material.textfield.TextInputLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/commentEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_top_margin"
            android:text="@string/edit"
            app:layout_constraintStart_toStartOf="@+id/commentScrollView"
            app:layout_constraintTop_toBottomOf="@+id/commentScrollView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>